# taylor-series

./: .gitignore  Pipfile  pyproject.toml
taylor/: finitediff.py
taylor/tests/: __init__.py  test_finitediff.py
taylor_series/: finite_differences.py
