[build-system]
requires = ["setuptools >= 61.0", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taylor-series"
version = "0.0.0"
description = "Python package for Taylor series computation."
readme = "README.md"
authors = [ { name = "Jacob Lee", email = "Jacob.J.Lee@outlook.com" } ]
license = [ { file = "LICENSE" } ]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/JacobLee23/taylor-series"

[tools.setuptools.packages.find]
where = ["."]
include = ["taylor*"]
exclude = ["taylor.docs*", "taylor.tests*"]